# metno-locationforecast

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  Pipfile  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: lint-and-test.yml
docs/: release_procedure.md
examples/: accessing_variables.py  basic_usage.py  converting_units.py  custom_save_location.py  get_forecast_for_particular_day.py  get_forecast_for_time_period.py  tomorrows_forecast.py
metno_locationforecast/: __init__.py  config.py  data_containers.py  forecast.py
src/: forecast.py
src/metno_locationforecast/: __init__.py  config.py  data_containers.py  forecast.py
tests/: .pydocstyle.ini  conftest.py  test_config.py  test_data_containers.py  test_forecast.py
tests/test_configs/test_bad_config_file/: setup.cfg
tests/test_configs/test_metno_locationforecast_file/: .metno_locationforecast
tests/test_configs/test_multiple_files/: metno-locationforecast.ini
tests/test_configs/test_partial_configuration/: setup.cfg
tests/test_configs/test_setup_file/: setup.cfg
tests/test_data/: lat39.9lon116.4altitude49_compact.json  lat39.9lon116.4altitudeNone_compact.json  lat40.7lon-74.0altitude10_compact.json  lat51.5lon-0.1altitude25_compact.json  lat51.5lon-0.1altitude25_complete.json
tests/test_data_containers/: test_data.py  test_interval.py  test_place.py  test_variable.py
tests/test_forecast/: test_forecast.py  test_forecast_with_user_config.py
yrlocationforecast/: __init__.py  data_containers.py  example1.py  forecast.py  forecasts.py  main.py
